<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layoutContent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_below="@id/tool_bar"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/repository_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/textCreatedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/small_margin"
            tools:text="@string/created_at"/>

        <TextView
            android:id="@+id/textUpdatedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/small_margin"
            tools:text="@string/updated_at"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/description"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/textDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/small_margin"
            tools:text="@string/updated_at"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_stats"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textStars"
                android:layout_width="match_parent"
                android:layout_weight="1"
                tools:text="Some"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/ic_star"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textForks"
                android:layout_width="match_parent"
                android:layout_weight="1"
                tools:text="Some"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/ic_fork"
                android:layout_height="wrap_content"/>


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnReload"
        android:layout_centerInParent="true"
        android:text="@string/lbl_reload"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/progress_bbar"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone"/>

</RelativeLayout>